# libefb

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md
.agents/skills/commit/: SKILL.md
.agents/skills/rust-api/: SKILL.md
.agents/skills/rust-api/references/: api_checklist.md
.agents/skills/rustdoc/: SKILL.md
.agents/skills/rustdoc/references/: api_checklist.md
.githooks/: pre-commit
aixm/: CLAUDE.md  Cargo.toml  build.rs
aixm/src/: error.rs  features.rs  lib.rs  parser.rs  xml.rs
arinc424/: .gitignore  CHANGELOG.md  Cargo.toml  README.md
arinc424-derive/: Cargo.toml
arinc424-derive/src/: lib.rs
arinc424-macros/: Cargo.toml
arinc424-macros/src/: lib.rs
arinc424/benches/: record_benchmark.rs
arinc424/examples/: arinc424_readme.rs
arinc424/src/: error.rs  field.rs  lib.rs  macros.rs  record.rs
arinc424/src/fields/: arc_dist_brg.rs  arsp_type.rs  boundary_via.rs  coordinate.rs  cust_area.rs  cycle.rs  datum.rs  frn.rs  level.rs  lower_upper_limit.rs  mag_true_ind.rs  mag_var.rs  mod.rs  name_ind.rs  notam.rs  record_type.rs  restrictive_type.rs  runway_id.rs  rwy_brg.rs  rwy_grad.rs  sec_sub_code.rs  source.rs  time_cd.rs  uav.rs  unit_ind.rs  waypoint_usage.rs
arinc424/src/records/: airport.rs  controlled_airspace.rs  mod.rs  restrictive_airspace.rs  runway.rs  waypoint.rs
bindings/c/: cbindgen.toml
bindings/c/include/: efb.h
bindings/c/src/aircraft/: station.rs
bindings/c/src/fms/: mod.rs
bindings/c/src/fp/: fuel_planning.rs
bindings/c/src/route/: leg.rs
bindings/python/src/fms/: mod.rs
bindings/wasm/: Cargo.toml
bindings/wasm/src/: aircraft.rs  core.rs  fp.rs  lib.rs  measurements.rs  nd.rs  route.rs
efb/: Cargo.toml  build.rs
efb/examples/: .gitignore  flightplanner.rs  readme.rs
efb/src/: algorithm.rs  error.rs  fc.rs  lib.rs  macros.rs
efb/src/aircraft/: cg_envelope.rs
efb/src/core/: fuel.rs  mag_var.rs  mod.rs  vertical_distance.rs
efb/src/fms/: mod.rs
efb/src/fp/: builder.rs  climb_descent_performance.rs  fuel_planning.rs  leg_performance.rs  mod.rs  perf.rs  runway_analysis.rs
efb/src/fp/takeoff_landing_performance/: mod.rs
efb/src/geojson/: geom.rs  route.rs
efb/src/geom/: coordinate.rs  mod.rs  polygon.rs
efb/src/measurements/: altitude.rs  angle.rs  constants.rs  density.rs  duration.rs  length.rs  mass.rs  measurement.rs  mod.rs  pressure.rs  speed.rs  temperature.rs  unit_of_measure.rs  vertical_rate.rs  volume.rs
efb/src/nd/: airac_cycle.rs  airport.rs  airspace.rs  builder.rs  fix.rs  index.rs  mod.rs  navaid.rs  runway.rs  waypoint.rs
efb/src/nd/convert/: mod.rs  openair.rs
efb/src/nd/convert/aixm/: fields.rs  mod.rs  records.rs
efb/src/nd/convert/arinc424/: airspace.rs  fields.rs  mod.rs  records.rs
efb/src/nd/db/: encoding.rs  mod.rs  read.rs  types.rs  write.rs
efb/src/nd/db/migrations/: V001__Initial_navigation_data.sql  mod.rs
efb/src/nd/parser/: mod.rs
efb/src/nd/parser/arinc424/: mod.rs
efb/src/route/: accumulator.rs  leg.rs  leg_fuel.rs  mod.rs  profile.rs  token.rs
efb/tests/: aixm_test.rs  route_decoding_test.rs
handbook/: book.toml
handbook/src/: AircraftConfiguration.md  PerformanceProfiles.md  Route.md  RoutePrompt.md  SUMMARY.md
