# SPDX-License-Identifier: Apache-2.0
# Copyright 2026 Joe Pearson
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "arinc424-derive"
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"
description = "Derive macros for arinc424"
homepage = "https://github.com/AeronauticalMaps/libefb"
repository = "https://github.com/AeronauticalMaps/libefb"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"

[lints]
workspace = true
