# SPDX-License-Identifier: Apache-2.0
# Copyright 2024 Joe Pearson
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "arinc424-macros"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Procedural macros for ARINC 424 field generation"
homepage = "https://github.com/pearjo/libefb"
repository = "https://github.com/pearjo/libefb"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }
