# SPDX-License-Identifier: Apache-2.0
# Copyright 2024, 2026 Joe Pearson
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "arinc424"
version = "0.3.0"
edition = "2021"
license = "Apache-2.0"
description = "ARINC 424 parser"
keywords = ["ARINC", "ARINC-424"]
homepage = "https://github.com/AeronauticalMaps/libefb"
repository = "https://github.com/AeronauticalMaps/libefb"
readme = "README.md"

[dependencies]
arinc424-derive = { path = "../arinc424-derive", version = "0.3.0" }

[dev-dependencies]
criterion = "0.8.1"

[[bench]]
name = "record_benchmark"
harness = false
